footer align fix

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -80,14 +80,11 @@ a {
     width: auto;
     height: 8%;
   }
-  .footer-border {
+  .footer-border1 {
     border-right: 2px solid #25483B;
   }
   .footer-seperation {
     text-align: center;
-    margin-right: 4%;
-    margin-left: 7%;
-    padding-right: 3%;
   }
 
 .page-header {
